--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -120,7 +120,7 @@ a {
 }
 
 .text-gradient {
-  background: linear-gradient(91.58deg, #2250F2 -29.55%, #0EBCF3 75.22%);
+  background: linear-gradient(91.58deg, #d40f0f -29.55%, #b96c06 75.22%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
